# rooster

./: tea.yaml
program/: Cargo.toml
program/src/: instruction.rs  lib.rs  processor.rs
