[package]
name = "miraplex-rooster"
version = "0.1.4"
edition = "2021"
authors = ["Metaplex Developers <dev@metaplex.com>"]
description = "Rooster: a simple program to test authorization rules for pNFTs."
license-file = "../LICENSE"
keywords = ["nft", "miraplex", "miraland", "blockchain"]
repository = "https://github.com/miraland-labs/rooster"
readme = "../README.md"

[dependencies]
borsh = "0.9.3"
# miraplex-token-metadata = { version = "1.7.1", features = ["no-entrypoint"] }
miraplex-token-metadata = { path = "../../miraplex-program-library/token-metadata/program", version = "1.7.1", features = ["no-entrypoint"] }
miraplex-utils = "=0.0.9"
num-derive = "0.3.3"
num-traits = "~0.2"
shank = "0.0.10"
miraland-program = "=1.14.17-rc5"
thiserror = "~1.0"
toml_datetime = "=0.6.1"

[features]
no-entrypoint = []
test-bpf = []

[dev-dependencies]
assert_matches = "1.5.0"
miraland-program-test = "=1.14.17-rc5"
miraland-sdk = "=1.14.17-rc5"
miraland-logger = "=1.14.17-rc5"

[lib]
crate-type = ["cdylib", "lib"]
name = "rooster"

